--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-vue": "^9.22.0",
     "prettier": "^3.2.5",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.26.0",
