--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
@@ -15,6 +17,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vue/cli-service": "^5.0.8",
     "axios": "^1.6.7",
     "vue-router": "^4.3.0"
   }
