--- a/.github/workflows/format-backend.yml
+++ b/.github/workflows/format-backend.yml
@@ -21,9 +21,11 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          cd backend
           python -m pip install --upgrade pip
           pip install -r requirements.txt  
 
       - name: Run Flake8
         run: |
+          cd ..
           flake8 backend
