--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -21,9 +21,8 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        cd backend
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r backend/requirements.txt
 
     - name: Run Tests
       env:
