--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "axios": "^1.6.8",
     "postcss": "^8.4.38",
     "vue-router": "^4.3.0",
-    "vue3-leaflet": "^1.0.48"
+    "vue-select": "^4.0.0-beta.6",
+    "vue3-leaflet": "^1.0.48",
+    "vuex": "^4.1.0"
   }
 }
