--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@mdi/font": "^7.4.47",
     "@vue/cli-service": "^5.0.8",
     "axios": "^1.6.8",
+    "mitt": "^3.0.1",
     "postcss": "^8.4.38",
     "vue-router": "^4.3.0",
     "vue-select": "^4.0.0-beta.6",
