--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "chart.js": "^4.4.2",
     "chartjs-adapter-moment": "^1.0.1",
     "devextreme-vue": "^23.2.6",
+    "jwt-decode": "^4.0.0",
     "mitt": "^3.0.1",
     "postcss": "^8.4.38",
     "vue-router": "^4.3.2",
