--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "chartjs-adapter-moment": "^1.0.1",
+    "date-fns": "^3.6.0",
     "devextreme-vue": "^23.2.6",
     "jwt-decode": "^4.0.0",
     "mitt": "^3.0.1",
